--- a/src/routes/dataset/[datasetId]/resource/[resourceId]/view/_view.ejs
+++ b/src/routes/dataset/[datasetId]/resource/[resourceId]/view/_view.ejs
@@ -14,7 +14,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Open Data Zürich - Stadt Zürich</title>
 
-		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="shortcut icon" href="/favicon.svg" />
 	</head>
 
 	<body data-site-root="<%= baseUrl %>" data-locale-root="<%= baseUrl %>">
